@@ -1,0 +1,169 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins</module>
+  <module-fancy>GStreamer Plugins</module-fancy>
+  <name>Water</name>
+  <version>0.8.3</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce a new release
+in the 0.8.x stable series of the GStreamer Plugins.
+</p>
+<p>
+The 0.8.x series is a stable series aimed at end users.
+It is not API or ABI compatible with the stable 0.6.x series.
+It is, however, parallel installable with the 0.6.x series.
+</p>
+<p>
+This module contains plugins providing media encoding and decoding,
+conversion, effects, and other elements that provide actual media
+handling functionality to the core.  You need the GStreamer core module
+to make them work.  The versions do not need to match exactly, as long
+as all of them are in the 0.8.x series.
+</p>
+<p>
+The FFmpeg-based decoder element has been moved to its own module.  If you
+want support for a lot of popular video formats, you need to install this
+module along with the GStreamer Core and Plugins.  An FFmpeg-based colorspace
+element has been added to the Plugins however.
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.6.x series</feature>
+    <feature>Internationalization</feature>
+    <feature>New translation in this release: Czech</feature>
+    <feature>New translation in this release: Hungarian</feature>
+    <feature>Translations: af az cs en_GB hu nl sr sv uk</feature>
+    <feature>pixel aspect ratio conversion</feature>
+    <feature>tcpserversink fixes and additions</feature>
+    <feature>oggdemux fixes</feature>
+    <feature>theoraenc and theoradec fixes</feature>
+    <feature>ximagesink and xvimagesink fixes</feature>
+    <feature>ladspa fixes</feature>
+    <feature>videoscale and ffmpegcolorspace fixes for stride</feature>
+    <feature>mpeg and dvd fixes</feature>
+    <feature>win32 project file additions</feature>
+
+    <feature>new elements: playbin and decodebin</feature>
+    <feature>new element: multifdsink</feature>
+    <feature>new element: pngdec</feature>
+    <feature>new element: alpha</feature>
+    <feature>new element: multifilesink</feature>
+  </features>
+
+  <applications>
+<p>
+The GConf settings have moved to a versioned location and can now be found
+under /system/gstreamer/0.8.  Applications should use the gconf library,
+as provided by gstreamer-gconf-0.8.pc, to access the default settings.
+</p>
+  </applications>
+  <contributors>
+    <person>Andy Wingo</person>
+    <person>Benjamin Otte</person>
+    <person>Colin Walters</person>
+    <person>David I. Lehn</person>
+    <person>David Schleef</person>
+    <person>Iain Holmes</person>
+    <person>Jan Schmidt</person>
+    <person>Johan Dahlin</person>
+    <person>Julien Moutte</person>
+    <person>Laszlo Dvornik</person>
+    <person>Miloslave Trmac</person>
+    <person>Ronald Bultje</person>
+    <person>Sebastien Cote</person>
+    <person>Steve Lhomme</person>
+    <person>Thomas Vander Stichele</person>
+    <person>Wim Taymans</person>
+    <person>Zaheer Abbas Merali</person>
+  </contributors>
+
+  <bugs>
+    <bug>
+      <id>141906</id>
+      <summary>hang on removing ximagesink from a pipeline</summary>
+    </bug>
+    <bug>
+      <id>142432</id>
+      <summary>Wrong sink MIME type in shout2send</summary>
+    </bug>
+    <bug>
+      <id>143222</id>
+      <summary>[oggdemux] Optimize tag reading</summary>
+    </bug>
+    <bug>
+      <id>143548</id>
+      <summary>Please update libtool to fix build on arm</summary>
+    </bug>
+    <bug>
+      <id>143703</id>
+      <summary>duration always 0 for some (gst produced) .ogg files</summary>
+    </bug>
+    <bug>
+      <id>144624</id>
+      <summary>wavenc doesn't close file properly</summary>
+    </bug>
+    <bug>
+      <id>144753</id>
+      <summary>libgstinterfaces should be split, or: 'volume' should not...</summary>
+    </bug>
+    <bug>
+      <id>144815</id>
+      <summary>[alsasink] gst_element_set_time_delay() assertion failure...</summary>
+    </bug>
+    <bug>
+      <id>144866</id>
+      <summary>[flac] seeking broken, duration not set on buffers [PATCH]</summary>
+    </bug>
+    <bug>
+      <id>144941</id>
+      <summary>alsasink assertion failure on ctrl+z and fg</summary>
+    </bug>
+    <bug>
+      <id>145031</id>
+      <summary>totem CVS won't compile because of gst-play ...</summary>
+    </bug>
+    <bug>
+      <id>145088</id>
+      <summary>gnome-volume-control has unlocalized volume names.</summary>
+    </bug>
+    <bug>
+      <id>145118</id>
+      <summary>Compile error (gcc 2.95, alsa)</summary>
+    </bug>
+    <bug>
+      <id>145336</id>
+      <summary>pipeline broke-stonecold</summary>
+    </bug>
+    <bug>
+      <id>147969</id>
+      <summary>LADSPA plugin should sanitize the info from the .so's to ...</summary>
+    </bug>
+    <bug>
+      <id>148021</id>
+      <summary>Bug in lib-riff</summary>
+    </bug>
+    <bug>
+      <id>148023</id>
+      <summary>[ximagesink] doesn't work with Xnest</summary>
+    </bug>
+    <bug>
+      <id>148043</id>
+      <summary>audioconvert</summary>
+    </bug>
+    <bug>
+      <id>148289</id>
+      <summary>mad plugin crashes on Sun</summary>
+    </bug>
+    <bug>
+      <id>148505</id>
+      <summary>[level] for silence peak is reported wrongly</summary>
+    </bug>
+    <bug>
+      <id>148986</id>
+      <summary>[lame] bug in negotiation</summary>
+    </bug>
+  </bugs>
+</release>
