@@ -1,3 +1,9 @@
+2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/releases/gst-plugins/0.8.3.xml:
+	* src/htdocs/releases/gst-plugins/Makefile.am:
+	  preparing release
+
 2004-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/bugs/bugs.xml:
